<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    android:background="@drawable/bg_main">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Luas Persegi Panjang"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        />

    <EditText
        android:id="@+id/sisi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukan Panjang"
        android:layout_marginTop="30sp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/sisi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukan Lebar"
        android:layout_marginTop="15sp"
        android:inputType="number"/>

    <TextView
        android:id="@+id/hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hasil"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="30sp" />

    <Button
        android:id="@+id/hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:background="@drawable/lengkung_button"
        android:textSize="15sp"
        android:textColor="@color/White"
        android:padding="25dp"/>

    <Button
        android:id="@+id/hapus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hapus"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:background="@drawable/lengkung_button"
        android:textSize="15sp"
        android:textColor="@color/White"
        android:padding="25dp"/>






</LinearLayout>